# SocketTestRepo

./: README.md  Security Policy - Comprehensive Configuration.md  package.json  pyproject.toml  requirements.txt  socket.yaml
Socket - CI/: CD.md
Socket Docs/: DevSecOps - Workflow.md  Example Onboarding.md  Onboarding Guide to Socket for DevSecOps.md  Onboarding Template and Process.md  Response Template Emails.md  Script for Demo Video.md  SecOps - Workflow.md  Security Policy - Suggested.md  Socket - Alerts Chart.md  Socket - Alerts.md  Socket - BitBucket.md  Socket - Elastic.md  Socket - GitHub.md  Socket - GitLab.md  Socket - Splunk.md  Socket - Summary.md  Socket scores and alerts.html  Socket scores and alerts.md  Support Process.md  Template for Quarterly Health Check.md  Using Socket.md
requirements/: default.txt  package.json
services/anaconda/: requirements.txt
