[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"  # or your specific Python version
scikit-learn = "*"
sqlglotrs = "0.2.6"
boto3 = "1.34.138"
sqlalchemy = "2.0.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"